// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs


Table user {
  id integer [primary key]
  salt varchar
  password_hash bytea
  username varchar
  created_at timestamp
  avatar integer
}

Table favourite {
  id integer [primary key]
  user_id integer
  recipe_id integer
}

Table consumable {
  id integer [primary key]
  name varchar
  brand_name varchar [null]
  size float
  units varchar
  carbs float
  fats float
  proteins float
}

Table recipe {
  id integer [primary key]
  creator_id integer
  created_at timestamp
  last_edited_at timestamp
  notes text
}



Table recipe_component {
  id integer [primary key]
  step integer
  step_description text
  recipe_id integer
  component_id integer
  quantity_id float

  

  indexes {
    recipe_id [name: "Recipe components index"]
  }
}

Table consumed {
  id integer [primary key]
  user_id integer
  recipe_id integer
  quantity float
  consumed_at timestamp
  created_at timestamp
  last_edited_at timestamp
  indexes {
    (user_id, consumed_at) [name: "Consumed by User", note: "group users consumed together for retrieval"]
  }
}

Ref: consumed.user_id > user.id // many-to-one

Ref: consumed.recipe_id > recipe.id

//Ref: recipe_component.id > recipe.id

Ref: recipe.creator_id > user.id

Ref: recipe_component.component_id > consumable.id

Ref: recipe_component.recipe_id > recipe.id

//Ref: recipe.user_id > user.id

//Ref: recipe.base_item_id > base_item.id

Ref: favourite.user_id > user.id

Ref: favourite.recipe_id > recipe.id
